--- a/introduction.html
+++ b/introduction.html
@@ -43,8 +43,12 @@
         </div>
     </div>
 </section>
-        
-    
+<main>
+
+</main>
+<footer>
+
+</footer>
 
 
 <script src="Javascript/introduction.js"></script>
