--- a/introduction.html
+++ b/introduction.html
@@ -45,8 +45,13 @@
 </section>
 <main>
     <section id="info">
-        
-
+        <div class="col-lg-6 col-md-6 col-sm-12">
+            <div class="pisiklinicat">
+                <div class="catimg">
+                    <img style="" src="/Images/pisikle_qucaqlasan-removebg-preview.png" alt="nicar ve pisik">
+                </div>
+            </div>
+        </div>
     </section>
 
 </main>
